tests/golden/errors/set_changed_size.py
s = {x for x in range(3)}
for v in s:
    s.add(99)
